--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ import '../styles/card.css';
         <div class="descripcion">
             <h1>{name}</h1>
             <h2>{position}</h2>
-            <p>{aboutMe}</p>
+            <p align='justify'>{aboutMe}</p>
             <div class="icons">
                 <a href={linkedin} class="hover-text" target="_blank">
                     <span class="tooltip-text" id="fade">
