--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import Card from "../components/Card.astro";
    -->
 
 <!-- You can replace the card's data with your own here. -->
-<BaseLayout title="Personal Portfolio" description="I’m a business solutions consultant specializing in building and occasionally designing exceptional digital experiences for financial solutions.">
+<BaseLayout title="Personal Portfolio" description="James – Strategic Tech Consultant. Systems Thinking | Agile Leadership | Secure Architectures">
 	<Card
 	  name="Se Thu Aung @ James"
 	  position="Solutions Consultant"
-	  aboutMe={`Hi there! I'm James, a seasoned solutions consultant passionate about crafting clean and dynamic webapps. With 10+ years of experience, I specialize in ERP and CRM development using Open-Source frameworks like Odoo and Microsoft Dynamic frameworks.\n\nI thrive on creating user-centric designs, features and optimizing performance for seamless browsing experiences.\n\nLet's collaborate TOGHETER!`}
+	  aboutMe={`Solutions Consultant | System Design & Development | Digital Forensics | Fintech & Digital Banking | Data Science | Passionate Tutor`}
 	  linkedin="https://www.linkedin.com/in/sethuaung"
 	  github="https://github.com/sethuaung"
 	  cvLink="/files/resume-cv.pdf"
