--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Card from "../components/Card.astro";
 <BaseLayout title="Personal Portfolio" description="James – Strategic Tech Consultant. Systems Thinking | Agile Leadership | Secure Architectures">
 	<Card
 	  name="Se Thu Aung @ James"
-	  position="Solutions Consultant"
-	  aboutMe={`Solutions Consultant | System Design & Development | Digital Forensics | Fintech & Digital Banking | Data Science | Passionate Tutor`}
+	  position="Strategic Tech Consultant"
+	  aboutMe={`Systems Design Thinking | Agile Leadership | Secure Architectures`}
 	  linkedin="https://www.linkedin.com/in/sethuaung"
 	  github="https://github.com/sethuaung"
 	  cvLink="/files/resume-cv.pdf"
