--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Card from "../components/Card.astro";
 	  linkedin="https://www.linkedin.com/in/sethuaung"
 	  github="https://github.com/sethuaung"
 	  cvLink="/files/resume-cv.pdf"
-	  profileImage="/images/sta_100x100.png"
+	  profileImage="/images/my-pic.jpeg"
 	/>
 </BaseLayout>
 
