--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Card from "../components/Card.astro";
    -->
 
 <!-- You can replace the card's data with your own here. -->
-<BaseLayout title="Personal Portfolio" description="James – Strategic Tech Consultant. Systems Thinking | Agile Leadership | Secure Architectures">
+<BaseLayout title="Personal Portfolio" description="Strategic Tech Consultant">
 	<Card
 	  name="Se Thu Aung @ James"
 	  position="Strategic Tech Consultant"
