--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Card from "../components/Card.astro";
 	  aboutMe={`Systems Design Thinking | Agile Leadership | Secure Architectures`}
 	  linkedin="https://www.linkedin.com/in/sethuaung"
 	  github="https://github.com/sethuaung"
-	  cvLink="/files/resume-cv.pdf"
+	  cvLink="/files/portfolio.pdf"
 	  profileImage="/images/my-pic.jpeg"
 	/>
 </BaseLayout>
