--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Card from "../components/Card.astro";
 	<Card
 	  name="Se Thu Aung @ James"
 	  position="Strategic Tech Consultant"
-	  aboutMe={`Systems Design Thinking | Agile Leadership | Secure Architectures`}
+	  aboutMe={`Systems Design Thinking, Agile Leadership, Digital Forensics, Secure Architectures`}
 	  linkedin="https://www.linkedin.com/in/sethuaung"
 	  github="https://github.com/sethuaung"
 	  cvLink="/files/portfolio.pdf"
